--- a/XM/XM.vcxproj
+++ b/XM/XM.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lru_cache.h" />
+    <ClInclude Include="ProductProvider.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
