--- a/XM/XM.vcxproj.filters
+++ b/XM/XM.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="StorageFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="logging.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
