--- a/XM/XM.vcxproj
+++ b/XM/XM.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IProductStorage.h" />
+    <ClInclude Include="logging.h" />
     <ClInclude Include="lru_cache.h" />
     <ClInclude Include="ProductProvider.h" />
     <ClInclude Include="StorageFactory.h" />
@@ -145,11 +146,13 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="packages\boost.1.85.0\build\boost.targets" Condition="Exists('packages\boost.1.85.0\build\boost.targets')" />
+    <Import Project="packages\Gray_spdlog.1.10.0\build\native\Gray_spdlog.targets" Condition="Exists('packages\Gray_spdlog.1.10.0\build\native\Gray_spdlog.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\boost.1.85.0\build\boost.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\boost.1.85.0\build\boost.targets'))" />
+    <Error Condition="!Exists('packages\Gray_spdlog.1.10.0\build\native\Gray_spdlog.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Gray_spdlog.1.10.0\build\native\Gray_spdlog.targets'))" />
   </Target>
 </Project>
