--- a/XM_test/packages.config
+++ b/XM_test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="gmock" version="1.11.0" targetFramework="native" />
+  <package id="Gray_spdlog" version="1.10.0" targetFramework="native" />
 </packages>
